# stratmaker

./: .gitignore  README.md
backend/: Cargo.toml  docker-compose.yml  go.mod  go.sum  main.go  run_tests.sh  testing.sh
backend/internal/api/: token_handler.go  user_handler.go
backend/internal/app/: app.go
backend/internal/middleware/: middleware.go
backend/internal/routes/: routes.go
backend/internal/store/: database.go  store_testing_utils.go  tokens.go  tokens_test.go  user_store.go  user_store_test.go
backend/internal/tokens/: tokens.go
backend/internal/utils/: utils.go
backend/migrations/: 00001_users.sql  00002_strategies.sql  00003_backtests.sql  00004_job_queue.sql
backend/src/: app.rs  auth.rs  dataset_client.rs  db.rs  errors.rs  extractors.rs  handlers.rs  jwt.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  s3_manager.rs  validators.rs
backend/src/db/: backtest_store.rs  job_queue.rs  strategy_store.rs  user_store.rs
backend/src/handlers/: backtests.rs  strategies.rs  users.rs
backend/src/models/: models_api.rs  models_db.rs
backend/src/store/: user_store.rs
backend/src/validators/: email_validator.rs  password_validator.rs  strategy_validator.rs  username_validator.rs
backend/tests/: integration_tests.rs
backend/tests/common/: mod.rs
backend/tests/integration_tests/: backtest.rs  get_current_user.rs  helper.rs  login.rs  main.rs  misc.rs  session.rs  strategy.rs  user_registration.rs
backend/tests/test_datasets/: BTCUSDT_1m.meta.json
backtester/: worker_test.py
dataset-manager/: Cargo.toml
dataset-manager/script/: .gitignore  data_gatherer_and_sender_to_cloudfare.py
dataset-manager/src/: main.rs
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: app.rs  chart.js  error.rs  home.rs  login.rs  main.rs  new_strategy.rs  register.rs  routes.rs  strategy.rs
