[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Web Framework ---
axum = { version = "0.7", features = ["macros"] }

# --- Async runtime ---
tokio = { version = "1.40", features = ["full"] }

# --- Database (SQLx with Postgres) ---
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "macros", "postgres", "chrono", "json", "uuid"] }

# --- Serialization / Deserialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- MessagePack ---
rmp-serde = "1.1"
rmpv = "1.0"

# --- Environment variables (.env) ---
dotenv = "0.15"

# --- Error handling (nice to have) ---
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# --- JWT for authentication ---
jsonwebtoken = "9"

# --- Hashing library ---
argon2 = "0.5"

# --- Random library ---
rand = "0.8"

# --- For cookies ---
axum-extra = {version = "0.9", features = ["cookie"] }
cookie = { version = "0.18", features = ["secure", "percent-encode"] }

# --- For uuids ---
uuid = { version = "1.0", features = ["v4", "serde"] }

# --- Redis, used for authentication for now ---
redis = { version = "0.24", features = ["tokio-comp"] }

# --- For encoding tokens into URL-safe strings ---
base64 = "0.22"

# --- For time ---
chrono = { version = "0.4", features = ["serde"] }

# --- For email checking ---
regex = "1.11"

# --- Used in extractors ---
async-trait = "0.1"

# --- To communicate with other services ---
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# --- For cors ---
tower-http = { version = "0.5", features = ["cors"] }

# --- For Cloudfare --
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.121.0"

[dev-dependencies]
axum-test = "14.0"
tokio-test = "0.4"
sqlx = { version = "0.7" }
tempfile = "3.0"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0
