[package]
name = "dataset-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
#memmap2 = "0.9.8"
#nix = { version = "0.30.1", features = [ "socket", "uio" ] }
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }


